test/param/shortCircuitParamRight.good
shortCircuitParamRight.chpl:17: error: Should we have resolved this?
